Stop align text inside toast

--- a/fe-all-notes/src/app/modules/shared/toaster/toast/toast.component.scss
+++ b/fe-all-notes/src/app/modules/shared/toaster/toast/toast.component.scss
@@ -44,6 +44,5 @@
 
 .toast-body {
   font-size: 12px;
-  text-align: justify;
   color: #333;
 }
